# clrs_with_rust

./: .gitignore  Cargo.toml  README.md
algorithms/: Cargo.toml
algorithms/src/sorting/: insertion_sort.rs
exercises/exercise_2_1_1/: Cargo.toml
exercises/exercise_2_1_1/src/: main.rs
exercises/exercise_2_1_2/: Cargo.toml
exercises/exercise_2_1_2/src/: main.rs
exercises/exercise_2_1_3/: Cargo.toml
exercises/exercise_2_1_3/src/: main.rs
exercises/exercise_2_1_4/: Cargo.toml
exercises/exercise_2_1_4/src/: main.rs
exercises/exercise_2_1_5/: Cargo.toml
exercises/exercise_2_1_5/srd/: main.rs
latex/: Cargo.toml  environments.tex  macros.tex  main.aux  main.tex  main.toc  preamble.tex
latex/chapters/: insertion_sort.tex
latex/config/: report.yml
latex/listings/: insertion_sort.rs
latex/src/: build.rs  generate.rs  lib.rs  manifest.rs  utils.rs
output/: CLRS_Analysis_Report.tex
src/: main copy.rs  main.rs
tests/: insertion_sort_test.rs
tests/algorithms/: insertion_sort_test.rs
