[package]
name = "clrs"
version = "0.1.0"
edition = "2024"

[dependencies]
algorithms = { path = "algorithms" }
glob = "0.3.0"

[workspace]
members = [
    "algorithms",
    "exercises/exercise_2_1_1",
    "exercises/exercise_2_1_2",
    "exercises/exercise_2_1_3",
    "exercises/exercise_2_1_4",
    "exercises/exercise_2_1_5",
]
resolver = "2"
