[package]
name = "clrs"
version = "0.1.0"
edition = "2024"

[dependencies]
algorithms = { path = "algorithms" }
latex = { path = "latex" }

[workspace]
members = [
    "algorithms",
    "latex",
    "exercises/exercise_2_1_1",
    "exercises/exercise_2_1_2",
    "exercises/exercise_2_1_3",
    "exercises/exercise_2_1_4",
    "exercises/exercise_2_1_5",
]
resolver = "2"
